Footer logo alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -920,7 +920,7 @@ Medium: 11px
 
   border-radius: 9px;
 
-  padding: 0.8rem 1.6rem;
+  padding: 0 1.6rem;
 
   margin-bottom: 3.2rem;
 }
